--- a/app.env
+++ b/app.env
@@ -5,3 +5,4 @@ GRPC_SERVER_ADDRESS=0.0.0.0:50051
 TOKEN_SYMMETRIC_KEY=12345678912345678912345678912345
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=24h
+MIGRATION_URL=file://db/migration
